1st Graded Commit

--- a/2Q1GCesiumLopez.html
+++ b/2Q1GCesiumLopez.html
@@ -1,1 +1,85 @@
 <!DOCTYPE html>
+<html lang=en>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content = "width=device-width, initial scale=1.0">
+        <title>1st Graded Exercise</title>
+        <link rel="icon" type="image/png" href="https://p1.hiclipart.com/preview/614/577/112/t-u-m-b-l-r-s-gudetama-20-icon-png-icon.jpg">
+        <style>
+            h1,h2,h3{
+                font-family: 'Trebuchet MS';
+            }
+        </style>
+    </head>
+    <body style="background-color: rgb(255, 224, 144);">
+        <h1>1st Graded Exercise</h1>
+        <h1>⋆⁺｡˚⋆˙‧₊☽ ◯ ☾₊‧˙⋆˚｡⁺⋆</h1>
+        <h2>by: Reen Debbie S. Lopez of 9-Cesium</h2>
+        <h1>Links: <a style="color: rgba(109, 82, 1, 0.966)" href ="/2nd%20Quarter%20Portfolio/index.html">Home Page</a>°⋆｡♪ <a style="color: rgba(109, 82, 1, 0.966)" href ="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">Link to Avery Ababon's Work</a>°⋆｡♪</h1>
+        <h1>♫⋆｡♪ ₊˚♬ ﾟ♫⋆｡♪ ₊˚♬ ﾟ.</h1>
+        <font size="40">
+            B R O A D W A Y (Behind The Scenes!)
+        </font>
+        <h1>----------------------------------------------------------------------------------------------------------</h1>
+        <h3>As the stage gets uncovered by the curtains and reveals the magic hidden behind it, the audience is swept into another dimension of talent, music, colors, and emotions. Yet behind these powerful performances lies members of unseen technicians, producers, and artists who make Broadway what it is in the modern day.</h3>
+        <h1>˖ ݁♬⋆.˚𝄞˖ ݁♬⋆.˚𝄞.˖ ݁♬⋆.˚𝄞˖ ݁♬⋆.˚𝄞.˖ ݁♬⋆.˚𝄞˖ ݁♬⋆.˚𝄞.  </h1>
+        <font size="35">
+            M A I N ⋆ R O L E S
+        </font>
+        <p><img src ="https://img.broadwaybox.com/entry/photo/Disney-Broadway-Musicals-Women-Female-Songs-Showstoppers.jpg" width="400"></p>
+        <h2>Directors - handles and molds the performance with precision</h2>
+        <h2>Choreographers - materializes movements for each song or piece</h2>
+        <h2>Actors - brings the characters to life</h2>
+        <h1>‧₊˚♪𝄞࿐₊˚⊹‧₊˚♪𝄞࿐₊˚⊹‧₊˚♪𝄞࿐₊˚⊹‧₊˚♪𝄞࿐₊˚⊹</h1>
+        <font size="35">
+            B A C K S T A G E ⋆ C R E W
+        </font>
+        <p><img src ="https://d26oc3sg82pgk3.cloudfront.net/files/media/edit/image/45091/article_featured%403x.jpg" width="400"></p>
+        <h2>Stage Managers - helps cue when the actor has to come on stage at a certain time mark</h2>
+        <h2>Light and Sound Team/Technicians - manipulates and sets the tone and atmosphere</h2>
+        <h2>Props Team - provides the props to the actors at certain time marks</h2>
+        <h1>𓂃˖♪彡𝄞₊⊹𓂃˖♪彡𝄞₊⊹𓂃˖♪彡𝄞₊⊹𓂃˖♪彡𝄞₊⊹𓂃˖♪彡𝄞₊⊹</h1>
+        
+        <font size="35">
+            S O M E ⋆ F A C T S ⋆ A B O U T ⋆ B A C K S T A G E
+        </font>
+
+        <table style ="width: 80%; height: 300px;" bgcolor="black">
+            <tr bgcolor="gold">
+                <th>Department</th>
+                <th>Main Role</th>
+                <th>Key Members</th>
+                <th>Fun Fact</th>
+            </tr>
+            <tr bgcolor="lightyellow">
+                <td>Production Team</td>
+                <td>Oversees the entire production</td>
+                <td>Directors, Producers</td>
+                <td>Most shows take almost a year to plan!</td>
+            </tr>
+            <tr bgcolor="lightyellow">
+                <td>Designers</td>
+                <td>Materializes the world the audience sees on stage</td>
+                <td>Costume & Set Designers</td>
+                <td>Over 400 costumes can be made for a single show!</td>
+            </tr>
+            <tr bgcolor="lightyellow">
+                <td>Technical Crew</td>
+                <td>Spearheads the lighting, sound, and effects</td>
+                <td>Technicians</td>
+                <td>Broadway shows uses lights that are enough to power 10 blocks of city lights!</td>
+            </tr>
+            <tr bgcolor="lightyellow">
+                <td>Performers</td>
+                <td>Ones who bring characters to life</td>
+                <td>Actors, Singers, Dancers</td>
+                <td>Performers of broadway shows often practice 6 days a week!</td>
+            </tr>
+        </table>
+        
+        <h1>♫₊˚⋆｡♪₊°♬˚.⁺♫₊˚⋆｡♪₊°♬˚.⁺♫₊˚⋆｡♪₊°♬˚.⁺♫₊˚⋆｡♪₊°♬˚.⁺</h1>
+        <h1>Want To Know More? Click These Youtube Links for Extra Info!</h1>
+        <h1><a style= "color:rgb(130, 93, 0)" href = "https://youtu.be/skxn4ihGCx0">⋆ Behind the Scenes at Disney's ALADDIN on Broadway</a></h1>
+        <h1><a style= "color: rgb(130, 93, 0)" href = "https://youtu.be/GxG0AvoXcbA">⋆ Inside Broadway’s Secret Laboratory: ‘Hamilton,’ ‘Frozen,’ and So Much More</a></h1>
+    </body>
+</html>
