--- a/2nd Quarter Portfolio/index.html
+++ b/2nd Quarter Portfolio/index.html
@@ -4,15 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content = "width=device-width, initial scale=1.0">
         <title>2nd Quarter Portolio</title>
+        <meta name="author" content="Reen Debbie S. Lopez">
         <link rel="icon" type="image/png" href="https://p1.hiclipart.com/preview/614/577/112/t-u-m-b-l-r-s-gudetama-20-icon-png-icon.jpg">
-        <link rel="stylesheet" href="style.css">
+        
         <style>
             h1,h2{
                 font-family: 'Trebuchet MS';
             }
         </style>
     </head>
-    <body style="background-color: rgb(244, 179, 14);">
+    <body style="background-color: rgb(255, 213, 106);">
         <h1 style="color: rgba(87, 65, 0, 0.966)">2nd Quarter Portfolio ݁ . ⊹ ₊ ݁.♡</h1>
         <h1 style="color: rgba(87, 65, 0, 0.966)">─── ･ ｡ﾟ☆: *.☽ .* :☆ﾟ. ───</h1>
         <h2 style="color: rgba(87, 65, 0, 0.966)">Made by: Reen Debbie S. Lopez of 9-Cesium</h2>
