--- a/2Q1GCesiumLopez.html
+++ b/2Q1GCesiumLopez.html
@@ -15,7 +15,9 @@
         <h1>1st Graded Exercise</h1>
         <h1>⋆⁺｡˚⋆˙‧₊☽ ◯ ☾₊‧˙⋆˚｡⁺⋆</h1>
         <h2>by: Reen Debbie S. Lopez of 9-Cesium</h2>
-        <h1>Links: <a style="color: rgba(109, 82, 1, 0.966)" href ="/2nd%20Quarter%20Portfolio/index.html">Home Page</a>°⋆｡♪ <a style="color: rgba(109, 82, 1, 0.966)" href ="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">Link to Avery Ababon's Work</a>°⋆｡♪</h1>
+        <nav>
+        <h1>Links: <a style="color: rgba(109, 82, 1, 0.966)" href ="../index.html">Home Page</a>°⋆｡♪ <a style="color: rgba(109, 82, 1, 0.966)" href ="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">Link to Avery Ababon's Work</a>°⋆｡♪</h1>
+        </nav>
         <h1>♫⋆｡♪ ₊˚♬ ﾟ♫⋆｡♪ ₊˚♬ ﾟ.</h1>
         <font size="40">
             B R O A D W A Y (Behind The Scenes!)
