--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <h1 style="color: rgba(87, 65, 0, 0.966)">2nd Quarter Portfolio ݁ . ⊹ ₊ ݁.♡</h1>
         <h1 style="color: rgba(87, 65, 0, 0.966)">─── ･ ｡ﾟ☆: *.☽ .* :☆ﾟ. ───</h1>
         <h2 style="color: rgba(87, 65, 0, 0.966)">Made by: Reen Debbie S. Lopez of 9-Cesium</h2>
-        <h1 style="color: rgba(87, 65, 0, 0.966)">Links: <a style="color: rgba(109, 82, 1, 0.966)" href ="/2Q1GCesiumLopez.html">1st Graded Exercise</a></h1>
+            <h1 style="color: rgba(87, 65, 0, 0.966)">Links: <a style="color: rgba(109, 82, 1, 0.966)" href ="2Q1GCesiumLopez.html">1st Graded Exercise</a></h1>
     </body>
 </html>
