--- a/2Q1GCesiumLopez.html
+++ b/2Q1GCesiumLopez.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content = "width=device-width, initial scale=1.0">
         <title>1st Graded Exercise</title>
         <link rel="icon" type="image/png" href="https://p1.hiclipart.com/preview/614/577/112/t-u-m-b-l-r-s-gudetama-20-icon-png-icon.jpg">
+        <link rel="stylesheet" href="style.css">
         <style>
             h1,h2,h3{
                 font-family: 'Trebuchet MS';
@@ -16,7 +17,7 @@
         <h1>⋆⁺｡˚⋆˙‧₊☽ ◯ ☾₊‧˙⋆˚｡⁺⋆</h1>
         <h2>by: Reen Debbie S. Lopez of 9-Cesium</h2>
         <nav>
-        <h1>Links: <a style="color: rgba(109, 82, 1, 0.966)" href ="../index.html">Home Page</a>°⋆｡♪ <a style="color: rgba(109, 82, 1, 0.966)" href ="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">Link to Avery Ababon's Work</a>°⋆｡♪ <a style="color: rgba(109, 82, 1, 0.966)" href ="https://himigisobel.github.io/2QPortfolioCSLabastilla/public/2Q1GCesiumLabastilla.html">Link to Himig Labastilla's Work</a>°⋆｡♪ </h1>
+        <h1>Links: <a style="color: white" href ="../index.html">Home Page</a>°⋆｡♪ <a style="color: white" href ="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">Link to Avery Ababon's Work</a>°⋆｡♪ <a style="color: white" href ="https://himigisobel.github.io/2QPortfolioCSLabastilla/public/2Q1GCesiumLabastilla.html">Link to Himig Labastilla's Work</a>°⋆｡♪ </h1>
         </nav>
         <h1>♫⋆｡♪ ₊˚♬ ﾟ♫⋆｡♪ ₊˚♬ ﾟ.</h1>
         <font size="40">
@@ -81,7 +82,7 @@
         
         <h1>♫₊˚⋆｡♪₊°♬˚.⁺♫₊˚⋆｡♪₊°♬˚.⁺♫₊˚⋆｡♪₊°♬˚.⁺♫₊˚⋆｡♪₊°♬˚.⁺</h1>
         <h1>Want To Know More? Click These Youtube Links for Extra Info!</h1>
-        <h1><a style= "color:rgb(130, 93, 0)" href = "https://youtu.be/skxn4ihGCx0">⋆ Behind the Scenes at Disney's ALADDIN on Broadway</a></h1>
-        <h1><a style= "color: rgb(130, 93, 0)" href = "https://youtu.be/GxG0AvoXcbA">⋆ Inside Broadway’s Secret Laboratory: ‘Hamilton,’ ‘Frozen,’ and So Much More</a></h1>
+        <h1><a style= "color: lightcoral" href = "https://youtu.be/skxn4ihGCx0">⋆ Behind the Scenes at Disney's ALADDIN on Broadway</a></h1>
+        <h1><a style= "color: lightcoral" href = "https://youtu.be/GxG0AvoXcbA">⋆ Inside Broadway’s Secret Laboratory: ‘Hamilton,’ ‘Frozen,’ and So Much More</a></h1>
     </body>
 </html>
