--- a/2QPortfolio/2Q1GCesiumLopez.html
+++ b/2QPortfolio/2Q1GCesiumLopez.html
@@ -17,7 +17,7 @@
         <h1>⋆⁺｡˚⋆˙‧₊☽ ◯ ☾₊‧˙⋆˚｡⁺⋆</h1>
         <h2>by: Reen Debbie S. Lopez of 9-Cesium</h2>
         <nav>
-        <h1>Links: <a style="color: white" href ="../index.html">Home Page</a>°⋆｡♪ <a style="color: white" href ="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">Link to Avery Ababon's Work</a>°⋆｡♪ <a style="color: white" href ="https://himigisobel.github.io/2QPortfolioCSLabastilla/public/2Q1GCesiumLabastilla.html">Link to Himig Labastilla's Work</a>°⋆｡♪ </h1>
+        <h1>Links: <a style="color: white" href ="index.html">Home Page</a>°⋆｡♪ <a style="color: white" href ="https://avery-ababon.github.io/Q2PortfolioCs_ABABON/public/2Q1GCesiumAbabon.html">Link to Avery Ababon's Work</a>°⋆｡♪ <a style="color: white" href ="https://himigisobel.github.io/2QPortfolioCSLabastilla/public/2Q1GCesiumLabastilla.html">Link to Himig Labastilla's Work</a>°⋆｡♪ </h1>
         </nav>
         <h1>♫⋆｡♪ ₊˚♬ ﾟ♫⋆｡♪ ₊˚♬ ﾟ.</h1>
         <font size="40">
